--- a/server/locale/tr/LC_MESSAGES/django.po
+++ b/server/locale/tr/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2023-02-03 05:55+0300\n"
+"POT-Creation-Date: 2023-02-03 05:51+0300\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -16,236 +16,235 @@ msgstr ""
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Plural-Forms: nplurals=4; plural=(n%10==1 && n%100!=11 ? 0 : n%10>=2 && n"
-"%10<=4 && (n%100<12 || n%100>14) ? 1 : n%10==0 || (n%10>=5 && n%10<=9) || (n"
-"%100>=11 && n%100<=14)? 2 : 3);\n"
+"Plural-Forms: nplurals=2; plural=(n > 1);\n"
 
 #: .\apps\company\apps.py:7
 msgid "company"
-msgstr "компания"
+msgstr "kurumsal"
 
 #: .\apps\company\models.py:26
 msgid "position"
-msgstr "позиция"
+msgstr "pozisyon"
 
 #: .\apps\company\models.py:28
 msgid "salary"
-msgstr "зарплата"
+msgstr "maaş"
 
 #: .\apps\company\models.py:29
 msgid "description"
-msgstr "описание"
+msgstr "açıklama"
 
 #: .\apps\company\models.py:33
 msgid "vacancy"
-msgstr "вакансия"
+msgstr "iş ilanı"
 
 #: .\apps\company\models.py:34
 msgid "vacancies"
-msgstr "вакансии"
+msgstr "iş ilanları"
 
 #: .\apps\company\models.py:41 .\apps\company\models.py:50
 msgid "full name"
-msgstr "имя фамилия"
+msgstr "ad soyad"
 
 #: .\apps\company\models.py:42 .\apps\company\models.py:51
 msgid "e-mail"
-msgstr "Почта"
+msgstr "E-posta"
 
 #: .\apps\company\models.py:43
 msgid "message"
-msgstr "сообщение"
+msgstr "Mesaj"
 
 #: .\apps\company\models.py:44
 msgid "cv"
-msgstr "резюме"
+msgstr "cv"
 
 #: .\apps\company\models.py:46
 msgid "is proceed?"
-msgstr "обработано?"
+msgstr "İşlendimi?"
 
 #: .\apps\company\models.py:59
 msgid "question"
-msgstr "вопрос"
+msgstr "soru"
 
 #: .\apps\company\models.py:60
 msgid "answer"
-msgstr "ответ"
+msgstr "cevap"
 
 #: .\apps\company\models.py:63 .\apps\company\models.py:64
 msgid "FAQ"
-msgstr "ЧЗВ"
+msgstr "SSS"
 
 #: .\apps\company\models.py:68
 msgid "placeholder"
-msgstr "плейсхолдер"
+msgstr "yazı"
 
 #: .\apps\company\models.py:72
 msgid "quote"
-msgstr "девиз"
+msgstr "söz"
 
 #: .\apps\company\models.py:75 .\apps\company\models.py:76
 msgid "settings"
-msgstr "настройки"
+msgstr "ayarlar"
 
 #: .\apps\company\templates\company\contact.django-html:14
 msgid "Call us!"
-msgstr "Позвоните нам!"
+msgstr "Bizi arayın!"
 
 #: .\apps\company\templates\company\contact.django-html:18
 #: .\apps\company\templates\company\home.django-html:22
 #: .\templates\header.django-html:17 .\templates\header.django-html:128
 msgid "Home page"
-msgstr "Главная"
+msgstr "Ana sayfa"
 
 #: .\apps\company\templates\company\contact.django-html:20
 #: .\templates\header.django-html:35 .\templates\header.django-html:137
 msgid "Contact us"
-msgstr "Свяжитесь с нами"
+msgstr "İletişim"
 
 #: .\apps\company\templates\company\contact.django-html:31
 msgid "Our contact  information"
-msgstr "Контактная информация"
+msgstr "İletişim bilgilerimiz"
 
 #: .\apps\company\templates\company\contact.django-html:33
 msgid "Call us to get answers for your questions!"
-msgstr "Позвоните нам что бы получить ответы на ваши вопросы!"
+msgstr "Sorularınıza cevap almak için bize ulaşınız!"
 
 #: .\apps\company\templates\company\contact.django-html:52
 msgid "Phone number"
-msgstr "Номер телефона"
+msgstr "Telefon numarası"
 
 #: .\apps\company\templates\company\contact.django-html:67
 #: .\templates\footer.django-html:24
 msgid "E-mail"
-msgstr "Почта"
+msgstr "E-posta"
 
 #: .\apps\company\templates\company\contact.django-html:81
 msgid "Address"
-msgstr "Адрес"
+msgstr "Adres"
 
 #: .\apps\company\templates\company\contact.django-html:101
 msgid "Feedback form"
-msgstr "Форма обратной связи"
+msgstr "Geri dönüş formu"
 
 #: .\apps\company\templates\company\contact.django-html:104
 msgid "Submit"
-msgstr "Отправить"
+msgstr "Gönder"
 
 #: .\apps\company\templates\company\contact.django-html:119
 msgid "Thanks for this information! We'll email you within a hour."
-msgstr "Спасибо за информацию! Вы получите письмо на почту в течении часа."
+msgstr ""
+"Bilgileriniz için teşekkür ederiz! Bir saat içinde eposta göndereceğiz."
 
 #: .\apps\company\templates\company\contact.django-html:120
 msgid "For faster feedback try to call phone number."
-msgstr "Для более быстрой обратной связи звоните на наш номер."
+msgstr "Daha seri görü dönüş için direk numaramızı arayınız!"
 
 #: .\apps\company\templates\company\home.django-html:37
 msgid "IT-solutions for your bussiness"
-msgstr "Интегратор бизнес-решени"
+msgstr "Yeni nesil yazılım hizmeti"
 
 #: .\apps\company\templates\company\home.django-html:47
 msgid "Smart-contracts"
-msgstr "Смарт-контракты"
+msgstr "Smart-contract"
 
 #: .\apps\company\templates\company\home.django-html:51
 #: .\apps\company\templates\company\home.django-html:202
 msgid "Web-sites"
-msgstr "Веб-сайты"
+msgstr "Web-siteleri"
 
 #: .\apps\company\templates\company\home.django-html:54
 msgid "Design"
-msgstr "Дизайн"
+msgstr "Tasarım"
 
 #: .\apps\company\templates\company\home.django-html:57
 msgid "SEO-optimization"
-msgstr "СЕО-оптимизация"
+msgstr "SEO-çalışmaları"
 
 #: .\apps\company\templates\company\home.django-html:60
 #: .\apps\company\templates\company\home.django-html:181
 msgid "Mobile applications"
-msgstr "Мобильные приложения"
+msgstr "Mobil uygulama"
 
 #: .\apps\company\templates\company\home.django-html:63
 msgid "Chat-bots"
-msgstr "Чат-боты"
+msgstr "Chat-botları"
 
 #: .\apps\company\templates\company\home.django-html:84
 msgid "Fixed terms"
-msgstr "Точные сроки"
+msgstr "Hızlı sürede kaliteli performans"
 
 #: .\apps\company\templates\company\home.django-html:87
 msgid "Our team sets exact deadlines and strictly adheres to them."
-msgstr "Наша команда определяет точные сроки и строго их придерживается."
+msgstr "Ekibimiz deadlineları uzatmadan projenizi en iyi şekilde tamamlar"
 
 #: .\apps\company\templates\company\home.django-html:104
 msgid "Everything under your control"
-msgstr "Прозрачность разработки"
+msgstr "Herşey sizin kontrolünüzde"
 
 #: .\apps\company\templates\company\home.django-html:107
 msgid "Track the development process of your project at every stage."
-msgstr "Отслеживайте процесс разработки вашего проекта на каждом этапе."
+msgstr "Her adımda projenizin yazılımını takip ederek kontrol edin"
 
 #: .\apps\company\templates\company\home.django-html:124
 #: .\apps\company\templates\company\home.django-html:315
 msgid "7/24 support"
-msgstr "Поддержка 7/24"
+msgstr "7/24 destek"
 
 #: .\apps\company\templates\company\home.django-html:127
 msgid "We are always happy to help with any questions."
-msgstr "Мы всегда рады помочь в любых ваших вопросах."
+msgstr "Oluşabilecek sorulanızı cevaplamaktan memnuniyet duyarız"
 
 #: .\apps\company\templates\company\home.django-html:162
 msgid "What do we do?"
-msgstr "Над чем мы работаем?"
+msgstr "Biz ne yapabiliriz?"
 
 #: .\apps\company\templates\company\home.django-html:165
 msgid "Our team provides services in various areas"
-msgstr "Наша команда предоставляет услуги в различных сферах"
+msgstr "Ekibimiz birçok alanda yazılım ve destek hizmetleri veriyor"
 
 #: .\apps\company\templates\company\home.django-html:221
 msgid "Smart-contracts and Dapps"
-msgstr "Смарт-контракты и децентрализированные приложения"
+msgstr "Smart-contract ve blokchain yazılımları"
 
 #: .\apps\company\templates\company\home.django-html:240
 msgid "SAAS products"
-msgstr "SAAS продукты"
+msgstr "SAAS yazılımları"
 
 #: .\apps\company\templates\company\home.django-html:262
 msgid "Learn more about Hooli Software in the next section"
-msgstr "Ознакомься с нашим сервисом ближе в следущей секции"
+msgstr "Bizi daha yakından tanımak için sonraki bölümü okuyun"
 
 #: .\apps\company\templates\company\home.django-html:264
 msgid "Frequently asked"
-msgstr "Часто задаваемые"
+msgstr "Sıkça sorulan"
 
 #: .\apps\company\templates\company\home.django-html:264
 msgid "questions"
-msgstr "вопросы"
+msgstr "sorular"
 
 #: .\apps\company\templates\company\home.django-html:298
 msgid "Catalog"
-msgstr "Каталог"
+msgstr "Katalog"
 
 #: .\apps\company\templates\company\home.django-html:300
 msgid "Actual list of Hooli Software services for 2023"
-msgstr "Актуальный список услуг Hooli Software на 2023 год"
+msgstr "2023 yılı için Hooli Software resmi hizmet koşulları dokümanı"
 
 #: .\apps\company\templates\company\home.django-html:302
 msgid "Download"
-msgstr "Скачать"
+msgstr "İndir"
 
 #: .\apps\company\templates\company\home.django-html:318
 msgid "Have questions? Our team will be happy to answer."
-msgstr "Есть вопросы? Мы будем рады ответить на них."
+msgstr "Bizi arayıp daima ulaşabilirsiniz."
 
 #: .\apps\company\templates\company\home.django-html:322
 msgid "Maximum delay"
-msgstr "Макс. время ожидания"
+msgstr "Maksimum geri dönüş süresi"
 
 #: .\apps\company\templates\company\home.django-html:322
 msgid "hours"
-msgstr "часа"
+msgstr "saat"
 
 #: .\apps\company\templates\company\home.django-html:340
 msgid "To maintainable SOFTWARE - to bright FUTURE"
@@ -253,205 +252,207 @@ msgstr ""
 
 #: .\apps\company\templates\company\home.django-html:343
 msgid "Start work with us!"
-msgstr "Начни работать с нами!"
+msgstr "Bizimle çalışmak istermisin?"
 
 #: .\apps\company\templates\company\home.django-html:347
 #: .\templates\header.django-html:80
 msgid "Create order"
-msgstr "Создать заказ"
+msgstr "Sıpariş oluştur"
 
 #: .\apps\posts\admin.py:15
 msgid "Content information"
-msgstr "Информация о контенте"
+msgstr ""
 
 #: .\apps\posts\admin.py:24
 msgid "Post information"
-msgstr "Информация о публикации"
+msgstr ""
 
 #: .\apps\posts\apps.py:7 .\apps\posts\models.py:54
 msgid "posts"
-msgstr "публикации"
+msgstr "haberler"
 
 #: .\apps\posts\models.py:9
 msgid "category name"
-msgstr "название категории"
+msgstr ""
 
 #: .\apps\posts\models.py:10
 msgid "parent category"
-msgstr "род. категория"
+msgstr ""
 
 #: .\apps\posts\models.py:14
 msgid "category"
-msgstr "категория"
+msgstr ""
 
 #: .\apps\posts\models.py:15
 msgid "categories"
-msgstr "категории"
+msgstr ""
 
 #: .\apps\posts\models.py:25
 msgid "tag name"
-msgstr "название тега"
+msgstr ""
 
 #: .\apps\posts\models.py:29
 msgid "tag"
-msgstr "тег"
+msgstr ""
 
 #: .\apps\posts\models.py:30
 msgid "tags"
-msgstr "теги"
+msgstr ""
 
 #: .\apps\posts\models.py:40
 msgid "content"
-msgstr "контент"
+msgstr ""
 
 #: .\apps\posts\models.py:41
 msgid "creation date"
-msgstr "дата создания"
+msgstr ""
 
 #: .\apps\posts\models.py:42
 msgid "is post published?"
-msgstr "пост опубликован?"
+msgstr ""
 
 #: .\apps\posts\models.py:43
-#, fuzzy
-#| msgid "creation date"
 msgid "reading duration"
-msgstr "дата создания"
+msgstr ""
 
 #: .\apps\posts\models.py:45
 msgid "thumbnail"
-msgstr "миниатюра"
+msgstr ""
 
 #: .\apps\posts\models.py:46
 msgid "title"
-msgstr "заголовок"
+msgstr ""
 
 #: .\apps\posts\models.py:53
 msgid "post"
-msgstr "публикация"
+msgstr ""
 
 #: .\core\settings.py:123
 msgid "Russian"
-msgstr "Русский"
+msgstr ""
 
 #: .\core\settings.py:124
 msgid "English"
-msgstr "Английский"
+msgstr ""
 
 #: .\core\settings.py:125
 msgid "Turkish"
-msgstr "Турецкий"
+msgstr ""
 
 #: .\templates\footer.django-html:22
 msgid "To get latest news"
-msgstr "Что бы получать новости первым"
+msgstr "En son güncel haberler alın"
 
 #: .\templates\footer.django-html:28
 msgid "Subscribe"
-msgstr "Подписаться"
+msgstr "Gönder"
 
 #: .\templates\footer.django-html:32
 msgid "Not spam :)"
-msgstr "Мы не спамим"
+msgstr "Kesinlikle spam değildir :)"
 
 #: .\templates\footer.django-html:40
 msgid "Important links"
-msgstr "Важные ссылки"
+msgstr "Sayfalar"
 
 #: .\templates\footer.django-html:55
 msgid "Ecosystem"
-msgstr "Экосистема"
+msgstr "Ekosistem"
 
 #: .\templates\footer.django-html:70
 msgid "Top-customers"
-msgstr "Топ-заказчики"
+msgstr "Bu ayın müşterileri"
 
 #: .\templates\footer.django-html:81 .\templates\footer.django-html:94
 #: .\templates\footer.django-html:107
 msgid "orders"
-msgstr "заказов"
+msgstr "sıpariş"
 
 #: .\templates\footer.django-html:121
 msgid "Available languages :"
-msgstr "Доступные языки :"
+msgstr "Mevcut diller :"
 
 #: .\templates\footer.django-html:149
 msgid "All rights reserved."
-msgstr "Все права защищены"
+msgstr "Bütün haklar saklıdır."
 
 #: .\templates\footer.django-html:151
 msgid "Privacy Policy"
-msgstr "Условия пользования"
+msgstr "Kullanım koşulları"
 
 #: .\templates\header.django-html:20 .\templates\header.django-html:131
 msgid "Services"
-msgstr "Услуги"
+msgstr "Hizmetler"
 
 #: .\templates\header.django-html:23 .\templates\header.django-html:134
 msgid "Blog"
-msgstr "Блог"
+msgstr "Blog"
 
 #: .\templates\header.django-html:26 .\templates\header.django-html:140
 msgid "More"
-msgstr "Дополнительно"
+msgstr "Daha fazla"
 
 #: .\templates\header.django-html:28
 msgid "About"
-msgstr "О нас"
+msgstr "Hakkımızda"
 
 #: .\templates\header.django-html:29 .\templates\header.django-html:143
 msgid "Forum"
-msgstr "Форум"
+msgstr "Forum"
 
 #: .\templates\header.django-html:30 .\templates\header.django-html:144
 msgid "Vacancies"
-msgstr "Вакансия"
+msgstr "İş ilanları"
 
 #: .\templates\header.django-html:31 .\templates\header.django-html:145
 msgid "Donate"
-msgstr "Донат"
+msgstr "Bağış"
 
 #: .\templates\header.django-html:32 .\templates\header.django-html:146
 msgid "Referral system"
-msgstr "Реферальная система"
+msgstr "Referans sistemi"
 
 #: .\templates\header.django-html:44
 msgid "Search"
-msgstr "Поиск по сайту"
+msgstr "Arama yap"
 
 #: .\templates\header.django-html:76
 msgid "Balance"
-msgstr "Баланс"
+msgstr "Bakiye"
 
 #: .\templates\header.django-html:77
 msgid "Points"
-msgstr "Баллы"
+msgstr "Puanlar"
 
 #: .\templates\header.django-html:83
 msgid "Profile settings"
-msgstr "Настройки профиля"
+msgstr "Profil ayarları"
 
 #: .\templates\header.django-html:84
 msgid "My bussiness"
-msgstr "Мои заказы"
+msgstr "Sıparişlerim"
 
 #: .\templates\header.django-html:85
 msgid "Logout"
-msgstr "Выйти"
+msgstr "Çıkış yap"
 
 #: .\templates\header.django-html:92
 msgid "Login"
-msgstr "Войти"
+msgstr "Giriş yap"
 
 #: .\templates\header.django-html:142
 msgid "About us"
-msgstr "О нас"
+msgstr "Hakkımızda"
 
 #~ msgid "setttings"
-#~ msgstr "настройки"
+#~ msgstr "ayarlar"
 
+#, fuzzy
+#~| msgid "Contact us"
 #~ msgid "Contact form"
-#~ msgstr "Форма обратной связи"
+#~ msgstr "İletişim"
 
+#, fuzzy
+#~| msgid "orders"
 #~ msgid "My orders"
-#~ msgstr "Мои заказы"
+#~ msgstr "Sıparişlerim"
